--- a/BackEnd/src/main/resources/templates/boardlist.html
+++ b/BackEnd/src/main/resources/templates/boardlist.html
@@ -9,10 +9,6 @@
         margin:0 auto;
         margin-top:40px;
     }
-    .layout_image{
-        width:500px;
-        height:500px;
-    }
     .layout_image img {
         width: 100%;
         height: 100%;
@@ -39,13 +35,12 @@
                     <td th:text="${gifticon.expiration_date}"></td>
                     <td th:text="${gifticon.serial_code}"></td>
                     <td th:text="${gifticon.register_time}"></td>
+                    <td><img th:src="${gifticon.original_image_path}" th:alt="${gifticon.gifticon_name}"></td>
                 </tr>
                 </tbody>
             </table>
         </div>
-        <div class="layout_image">
-            <img th:src="${gifticon.original_image_path}" alt="Image">
-        </div>
+
     </div>
 </body>
 </html>
