--- a/BackEnd/src/main/resources/templates/boardlist.html
+++ b/BackEnd/src/main/resources/templates/boardlist.html
@@ -30,12 +30,12 @@
                 </thead>
                 <tbody>
                 <tr th:each = "gifticon : ${list}">
-                    <td th:text="${gifticon.where_to_use}"></td>
-                    <td th:text="${gifticon.gifticon_name}"></td>
-                    <td th:text="${gifticon.expiration_date}"></td>
-                    <td th:text="${gifticon.serial_code}"></td>
-                    <td th:text="${gifticon.register_time}"></td>
-                    <td><img th:src="${gifticon.original_image_path}" th:alt="${gifticon.gifticon_name}"></td>
+                    <td th:text="${gifticon.getWhere_to_use}"></td>
+                    <td th:text="${gifticon.getGifticon_name}"></td>
+                    <td th:text="${gifticon.getExpiration_date()}"></td>
+                    <td th:text="${gifticon.getSerial_code}"></td>
+                    <td th:text="${gifticon.getRegister_time}"></td>
+                    <td><img th:src="${gifticon.original_image_path}" th:alt="${gifticon.getGifticon_name}"></td>
                 </tr>
                 </tbody>
             </table>
