--- a/BackEnd/src/main/resources/templates/joinpage.html
+++ b/BackEnd/src/main/resources/templates/joinpage.html
@@ -12,14 +12,14 @@
     <form th:method="post" th:action="|@{/{loginType}/join (loginType=${loginType})}|" th:object="${joinRequest}">
         <div>
             <label th:for="loginId">로그인 아이디 : </label>
-            <input type="text" th:field="*{loginId}" th:errorclass="error-input"/>
-            <div class="error-class" th:errors="*{loginId}"></div>
+            <input type="text" th:field="*{userId}" th:errorclass="error-input"/>
+            <div class="error-class" th:errors="*{userId}"></div>
         </div>
         <br/>
         <div>
             <label th:for="password">비밀번호 : </label>
-            <input type="password" th:field="*{password}" th:errorclass="error-input"/>
-            <div class="error-class" th:errors="*{password}"></div>
+            <input type="password" th:field="*{userPassword}" th:errorclass="error-input"/>
+            <div class="error-class" th:errors="*{userPassword}"></div>
         </div>
         <br/>
         <div>
@@ -30,8 +30,8 @@
         <br/>
         <div>
             <label th:for="nickname">닉네임 : </label>
-            <input type="text" th:field="*{nickname}" th:errorclass="error-input"/>
-            <div class="error-class" th:errors="*{nickname}"></div>
+            <input type="text" th:field="*{userName}" th:errorclass="error-input"/>
+            <div class="error-class" th:errors="*{userName}"></div>
         </div>
         <br/>
         <button type="submit">회원 가입</button>
