--- a/BackEnd/src/main/resources/templates/loginpage.html
+++ b/BackEnd/src/main/resources/templates/loginpage.html
@@ -12,12 +12,12 @@
     <form th:method="post" th:action="|@{/{loginType}/login (loginType=${loginType})}|" th:object="${loginRequest}">
         <div>
             <label th:for="loginId">로그인 아이디 : </label>
-            <input type="text" th:field="*{loginId}"/>
+            <input type="text" th:field="*{userId}"/>
         </div>
         <br/>
         <div>
             <label th:for="password">비밀번호 : </label>
-            <input type="password" th:field="*{password}"/>
+            <input type="password" th:field="*{userPassword}"/>
         </div>
         <div th:if="${#fields.hasGlobalErrors()}">
             <br/>
