--- a/BackEnd/src/main/resources/templates/loginpage.html
+++ b/BackEnd/src/main/resources/templates/loginpage.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 <div>
-    <h1><a th:href="|/${loginType}|">[[${pageName}]]</a></h1> <hr/>
+    <h1><a th:href="|/${loginType}/|">[[${pageName}]]</a></h1> <hr/>
     <h2>로그인</h2>
-    <form th:method="post" th:action="|@{/{loginType}/login (loginType=${loginType})}|" th:object="${loginRequest}">
+    <form th:method="post" th:action="|@{/{loginType}/loginpro (loginType=${loginType})}|" th:object="${loginRequest}">
         <div>
-            <label th:for="loginId">로그인 아이디 : </label>
+            <label th:for="userId">로그인 아이디 : </label>
             <input type="text" th:field="*{userId}"/>
         </div>
         <br/>
         <div>
-            <label th:for="password">비밀번호 : </label>
+            <label th:for="userPassword">비밀번호 : </label>
             <input type="password" th:field="*{userPassword}"/>
         </div>
         <div th:if="${#fields.hasGlobalErrors()}">
